# release-config

./: .gitlab-ci.yml  .npmrc  README.md  Taskfile.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.config/: common-keywords.hbs.json  package-lock.json  variables.json
.config/docs/: Taskfile.yml  common.json  package-lock.json  package.json  pyproject.toml  variables.json
.config/docs/readme/: subheader.md
.config/husky/: commit-msg  prepare-commit-msg
.config/taskfiles/git/: Taskfile-hook.yml
.config/taskfiles/lint/: Taskfile.yml
.config/taskfiles/python/: Taskfile.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/partials/: guide.md
local/: cyclonedx-npm-npm.json  package-lock.json
local/slim/: exe.txt  install.txt
src/: commit-types.ts  custom-transformer.ts  defaults.ts  github.ts  main.ts  project.ts
